# DistributedSystems-AFSv1

./: CMakeLists.txt  README  README.md  afs_client.cc  afs_fuse.cc  afs_server.cc  afs_server.copy.cc  client_crash_consistency_todo.txt  compile.sh  compile_failure.sh  fuse-3.10.5.tar.xz  fuse_note.txt  g1m-client-run-cmds.sh  g1m-hosts-server.txt  init.sh  test  test.cc  test.txt
deploy/: g1m-binary-scp.sh  g1m-client-run-cmds.sh  g1m-client-run-cmds.txt  g1m-hosts-client-copy.txt  g1m-hosts-client.txt
g1n/: c1.txt  c15.txt  c2.txt  c4.txt  c8.txt  g1n-client-run-cmds.sh  g1n-hosts-server.txt  g1n-scp.sh
grpc_example/: send_file.proto  send_file_server.cc
measurement/: Makefile  driver_fsync.cc  driver_read.cc  driver_read_pause.cc  driver_write.cc  fail_before_close.cpp  loop_write_client.cc  loop_write_client.sh  restart_bg.sh  restart_client.sh  restart_fau_fg.sh  restart_fdu_fg.sh  restart_fg.sh  restart_rmcache_fg.sh  scp_nodes.sh  timespec_lib.cc  timespec_lib.h
protos/: afs.proto
